adding supplier, update user

--- a/SmartStock/Web.config
+++ b/SmartStock/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <appSettings>
-	<add key="AppDBConnect" value="Data Source=; Initial Catalog=; User ID=; Password=" />
+	<add key="AppDBConnect" value="Data Source=itd2.cincinnatistate.edu; Initial Catalog=CPDM-WoodJ; User ID=CPDM-Jmwood2; Password=0684671" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
