--- a/SmartStock/SmartStock.csproj
+++ b/SmartStock/SmartStock.csproj
@@ -170,6 +170,7 @@
     <Content Include="Views\Home\HomePage.cshtml" />
     <Content Include="Views\Home\SignUp.cshtml" />
     <Content Include="Views\Profile\Users.cshtml" />
+    <Content Include="Views\Profile\Suppliers.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
