--- a/SmartStock/SmartStock.csproj
+++ b/SmartStock/SmartStock.csproj
@@ -172,6 +172,8 @@
     <Content Include="Views\Profile\Users.cshtml" />
     <Content Include="Views\Profile\Suppliers.cshtml" />
     <Content Include="Views\Profile\CreateUser.cshtml" />
+    <Content Include="Views\Home\InitializeSuppliers.cshtml" />
+    <Content Include="Views\Profile\Inventory.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
