--- a/SmartStock/SmartStock.csproj
+++ b/SmartStock/SmartStock.csproj
@@ -174,6 +174,7 @@
     <Content Include="Views\Profile\CreateUser.cshtml" />
     <Content Include="Views\Home\InitializeSuppliers.cshtml" />
     <Content Include="Views\Profile\Inventory.cshtml" />
+    <Content Include="Views\Profile\EditSupplier.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
