--- a/SmartStock/SmartStock.csproj
+++ b/SmartStock/SmartStock.csproj
@@ -152,6 +152,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Views\Home\InitializeEmployees.cshtml" />
     <None Include="Views\Home\InitializeInventory.cshtml" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
