--- a/SmartStock/Web.config
+++ b/SmartStock/Web.config
@@ -58,7 +58,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-  <add name="DBModel" connectionString="metadata=res://*/Models.DBModels.csdl|res://*/Models.DBModels.ssdl|res://*/Models.DBModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=itd2.cincinnatistate.edu;initial catalog=CPDM-WoodJ;persist security info=True;user id=CPDM-Jmwood2;password=0684671;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="DBModel" connectionString="metadata=res://*/Models.DBModels.csdl|res://*/Models.DBModels.ssdl|res://*/Models.DBModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=itd2.cincinnatistate.edu;initial catalog=CPDM-WoodJ;persist security info=True;user id=CPDM-Jmwood2;password=0684671;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
