--- a/SmartStock/SmartStock.csproj
+++ b/SmartStock/SmartStock.csproj
@@ -279,6 +279,8 @@
     <Content Include="Views\Profile\DeleteCard.cshtml" />
     <Content Include="Views\Profile\EditItem.cshtml" />
     <Content Include="Views\Profile\DeleteItem.cshtml" />
+    <Content Include="Views\Profile\InventoryAdjustment.cshtml" />
+    <Content Include="Views\Profile\Audit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
